[package]
name = "config-derive"
version = "0.1.0"
authors = ["Benjamin Coenen <5719034+bnjjj@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "1.0.48", features = ["full", "extra-traits"] }
