[package]
    authors     = ["Benjamin Coenen <5719034+bnjjj@users.noreply.github.com>"]
    categories  = ["config"]
    description = "Proc macro used by Twelf crate"
    edition     = "2021"
    homepage    = "https://github.com/bnjjj/twelf"
    keywords    = ["config", "configuration", "env", "environment", "settings"]
    license     = "MIT"
    name        = "config-derive"
    readme      = "README.md"
    repository  = "https://github.com/bnjjj/twelf"
    version     = "0.11.0"


    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
    proc-macro = true

[dependencies]
    heck        = "0.4.0"
    proc-macro2 = "1.0.36"
    quote       = "1.0"
    syn         = { version = "1.0", features = ["full", "extra-traits"] }
[dev-dependencies]
    clap_rs     = { version = "3.0", package = "clap" }

[features]
    clap  = []
    dhall = []
    env   = []
    ini   = []
    json  = []
    toml  = []
    yaml  = []
    default_trait = []
    custom_fn = []
