[package]
name = "config"
version = "0.1.0"
authors = ["Benjamin Coenen <5719034+bnjjj@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = { path = "../../envy" }
serde = { version = "1.0.117", features = ["derive"] }
config-derive = { path = "../config-derive" }
serde_json = { version = "1.0.59", features = ["raw_value"] }
toml = "0.5.7"
