[package]
name = "twelf"
version = "0.1.8"
authors = ["Benjamin Coenen <5719034+bnjjj@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
keywords = ["config", "configuration", "env", "environment", "settings"]
categories = ["config"]
readme = "../README.md"
homepage = "https://github.com/bnjjj/twelf"
repository = "https://github.com/bnjjj/twelf"
description = "Twelf is a configuration solution for Rust including 12-Factor support. It is designed with layers in order to configure different sources and formats to build your configuration. The main goal is to be very simple using a proc macro."

[dependencies]
clap_rs = { version = "3.0", package = "clap" }
config-derive = { path = "../config-derive", version = "0.1" }
envy = { version = "0.4.1", git = "https://github.com/bnjjj/envy", branch = "master" }
log = "0.4.14"
serde = { version = "1", features = ["derive"] }
serde_dhall = "0.11"
serde_ini = "0.2.0"
serde_json = "1"
serde_yaml = "0.8.23"
thiserror = "1"
toml_rs = { version =  "0.5.8", package = "toml" }
