[package]
    authors     = ["Benjamin Coenen <5719034+bnjjj@users.noreply.github.com>"]
    categories  = ["config"]
    description = "Twelf is a configuration solution for Rust including 12-Factor support. It is designed with layers in order to configure different sources and formats to build your configuration. The main goal is to be very simple using a proc macro."
    edition     = "2021"
    homepage    = "https://github.com/bnjjj/twelf"
    keywords    = ["config", "configuration", "env", "environment", "settings"]
    license     = "MIT"
    name        = "twelf"
    readme      = "../README.md"
    repository  = "https://github.com/bnjjj/twelf"
    version     = "0.5.0"

[dependencies]
    clap_rs       = { version = "3.0", package = "clap", optional = true, features = ["derive"] }
    config-derive = { path = "../config-derive", version = "0.5" }
    envy          = { version = "0.4.1", git = "https://github.com/bnjjj/envy", branch = "master", optional = true }
    log           = "0.4.14"
    serde         = { version = "1", features = ["derive"] }
    serde_dhall   = { version = "0.11", optional = true }
    serde_ini     = { version = "0.2.0", optional = true }
    serde_json    = "1"
    serde_yaml    = { version = "0.8.23", optional = true }
    thiserror     = "1"
    toml_rs       = { version = "0.5.8", package = "toml", optional = true }

[features]
    clap    = ["clap_rs", "config-derive/clap"]
    default = ["env", "dhall", "clap", "ini", "json", "yaml", "toml"]
    dhall   = ["serde_dhall", "config-derive/dhall"]
    env     = ["envy", "config-derive/env"]
    ini     = ["serde_ini", "config-derive/ini"]
    json    = ["config-derive/json"]
    toml    = ["toml_rs", "config-derive/toml"]
    yaml    = ["serde_yaml", "config-derive/yaml"]